# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
#

2005-05-23 17:08:13 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-57

    Summary:
      merge csv fixes from the 0.8 branch
    Revision:
      itools--main--0.9--patch-57

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-93
       handlers, fix csv parser for one column csv files
    

    modified files:
     Changelog handlers/CSV.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.8--patch-93


2005-05-23 08:54:34 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-56

    Summary:
      documentation, reviewing i18n chapter
    Revision:
      itools--main--0.9--patch-56


    modified files:
     Changelog doc/i18n.tex


2005-05-19 18:23:46 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-55

    Summary:
      documentation, finish i18n chapter draft
    Revision:
      itools--main--0.9--patch-55


    modified files:
     Changelog doc/examples/task_tracker1/TaskTracker_view.xml
     doc/examples/task_tracker2/TaskTracker_view.xml.en
     doc/examples/task_tracker2/locale/es.po
     doc/examples/task_tracker2/locale/locale.pot doc/i18n.tex


2005-05-19 17:32:56 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-54

    Summary:
      documentation, finish internationalization section
    Revision:
      itools--main--0.9--patch-54


    modified files:
     Changelog doc/examples/task_tracker2/TaskTracker.py
     doc/examples/task_tracker2/locale/es.po
     doc/examples/task_tracker2/locale/locale.pot doc/i18n.tex
     gettext/domains.py


2005-05-19 16:13:20 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-53

    Summary:
      merge html improvement from the 0.8 branch
    Revision:
      itools--main--0.9--patch-53

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-92
       html, fix parser when encoding is defined late
    

    modified files: