@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-05-23 18:05:17 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-58
+
+    Summary:
+      gettext, now domain aware methods are class methods
+    Revision:
+      itools--main--0.9--patch-58
+
+
+    modified files:
+     Changelog gettext/domains.py
+
+
 2005-05-23 17:08:13 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-57
 
     Summary:
